# argument-checks

./: .gitignore  LICENSE  README.md  pyproject.toml
arg_check/: __init__.py  decorators.py  verifications.py
argument_checks/: __init__.py  decorators.py
tests/: test_expected_types.py  test_expected_types_decorator.py  test_required_args.py
